# dip_app

./: .babelrc  .eslintrc.js  .gitignore  Cargo.toml  index.html  package-lock.json  package.json  todo.org  webpack.config.js
crate/: Cargo.toml
crate/src/: lib.rs
docs/: 1.js  Cargo.27cbd41b.toml  Cargo.7fa3020c.toml  Cargo.9932d3d5.toml  dip_lib_bg.42dbfa34.wasm  dip_lib_bg.b3336824.wasm  dip_lib_bg.c1bd0e74.wasm  dip_lib_bg.d50a9d46.wasm  index.html  index.js  main.141be9f2.js  main.141be9f2.js.map  main.1e43358e.css  main.1e43358e.css.map  main.1e43358e.js  main.1e43358e.js.map  main.30d641fa.css  main.4a548287.css  main.50ae0a52.css  main.50ae0a52.css.map  main.8ce7fa92.js  main.8ce7fa92.js.map  main.92e51012.js  main.92e51012.js.map  main.9ec2730c.js  main.9ec2730c.js.map  main.bd271b6d.css  main.fe223853.js  main.fe223853.js.map
js/: App.vue  index.js  router.js  store.js
js/components/: FileNotification.vue  FilePicker.vue  ImageViewer.vue  Log.vue  NavBar.vue
js/components/Ass1/: AsciiModal.vue  FilePicker.vue  Renderer.vue
js/components/Viewer/: Ass1.vue  FilePicker.vue  ImageViewer.vue  Log.vue
js/store/: actions.js  mutations.js  state.js
js/views/: Ass1.vue  Home.vue  ViewerPage.vue
src/: App.vue  ass1.pest  lib.rs  main.js
src/components/: FileNotification.vue  FilePicker.vue  ImageViewer.vue  Log.vue  NavBar.vue  Viewer.vue
src/router/: index.js
src/store/: index.js
src/views/: Home.vue  Viewer.vue  ViewerPage.vue
static/: index.html
