[package]
name = "dip-lib"
version = "0.1.0"
authors = ["Dhruv Dhamani <dhruv.dhamani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.10"
wasm-bindgen = "0.2.59"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.36"
features = [
  'ImageData'
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[profile.release]
lto = true